--- a/flask_app/templates/dojos.html
+++ b/flask_app/templates/dojos.html
@@ -9,17 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
-    <h2>New Dojo</h2> <h2>All Dojo</h2>
-
-    <form>
-        <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" >
-        </div>
-        </form>
-        <div>
-        <label class="text-end">All Dojos</label>
-            <input type="text">
+    <h2>New Dojo</h2>
+    <form action="/" method="POST">
+        <input type="text" name="dojo_name">
+        <input type="submit" value="Add">
+    </form>
+        
+        <div class="position-absolute top-0 end-50">
+            <h2>All Dojo</h2>
         </div>
 </body>
 </html>
