--- a/flask_app/templates/dojos.html
+++ b/flask_app/templates/dojos.html
@@ -9,14 +9,28 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
-    <h2>New Dojo</h2>
-    <form action="/" method="POST">
-        <input type="text" name="dojo_name">
-        <input type="submit" value="Add">
-    </form>
-        
-        <div class="position-absolute top-0 end-50">
-            <h2>All Dojo</h2>
-        </div>
+    <div class="card-body">
+        <h2 class="card-title text-primary"> {{dojo.name}} Ninjas</h2>
+        <table class="table table-info">
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Age</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for ninja in dojo.ninja %}
+                <tr>
+                    <td>{{ninja.first_name}}</td>
+                    <td>{{ninja.last_name}}</td>
+                    <td>{{ninja.age}}</td>
+                    {% endfor %}
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <a href="/"class="text-center mx-auto">Home</a>
 </body>
 </html>
