--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -3,24 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="css" href="static/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>New Ninja</title>
 </head>
 <body>
-    <form action="/dojo/create" method="POST" class="col-6 bg-dark">
+<div class="container">
+    <div class="row">
+        <div class="col">
+    <form action="/create_dojo" method="POST" class="col-6 bg-dark">
         <h2 class="text-center text-primary">New Dojo</h2>
-        <div class="form-group text-primary">
-            <label for="dojo">Name:</label>
-            <input type="text">
-            <input class="btn btn-primary" type="submit" value="Add Dojo">
+            <div class="form-group text-primary">
+                <label for="dojo">Name:</label>
+                <input type="text" name="submit" >
+                <input class="btn btn-primary" type="submit" value="Add Dojo">
+            </div>
         </div>
     </form>
 
-    
-    {% for dojo in dojos %}
-        <p>{{dojo.name}}</p>
-    {% endfor %}
+
+    <div class="col bg-dark">
+        <h2 class="text-center text-primary">Dojos</h2>
+    <table>
+        <tbody>
+            {% for one_dojo in dojos %}
+                <tr>
+                    <td>{{ one_dojo.name }}</td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </div>
+    </div>
+</div>
+    </table>
+
     <div>
         <p><a href="/ninja"> Add ninja</a></p>
     </div>
+
 </body>
 </html>
